# demo-monopoly

./: COMMENTS.md  pyproject.toml
src/application/: start_game_usecase.py
src/domain/: game.py  jogador.py  propriedade.py  strategies.py
src/infra/api/: main.py
