[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Felipe Silva <felipefets@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "tests"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.116.1"}
unicorn = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
